Artefact deep linking enhancement

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
 
 <script src="javascript/froogaloop.min.js"></script>
 <script src="javascript/jTweener-0.2-full.js"></script>
+<script src="javascript/swfaddress.js"></script>
 
 <script src="javascript/Utilities.js"></script>
 <script src="javascript/Geom.js"></script>
@@ -59,6 +60,7 @@
 <script src="javascript/DataManager.js"></script>
 <script src="javascript/ArtefactDataManager.js"></script>
 <script src="javascript/ArtefactsSelectionConfiguration.js"></script>
+<script src="javascript/DeepLinkingManager.js"></script>
 <script src="javascript/CategoryCell.js"></script>
 <script src="javascript/CategoryTable.js"></script>
 <script src="javascript/RandomCanvas.js"></script>
