Social media buttons and handlers in place

--- a/src/index.html
+++ b/src/index.html
@@ -159,9 +159,12 @@ window.onload = function(){
         	<li><a class="menuItem addToFavouritesButton">ADD TO MY ARCHIVE</a></li>
             <li><a class="menuItem removeFromFavouritesButton">REMOVE FROM MY ARCHIVE</a></li>
         	<li><a class="menuItem fullscreenButton">FULLSCREEN</a></li>
+            <li><a class="menuItem facebookShareButton">FACEBOOK</a></li>
+            <li><a class="menuItem twitterShareButton">TWIITER</a></li>
             <li><a class="menuItem vimeoPlayButton">PLAY</a></li>
             <li><a class="menuItem vimeoPauseButton">PAUSE</a></li>
             <li><a class="menuItem vimeoUnloadButton">UNLOAD</a></li>
+            
         </ul>
         <div id="relatedArtefactsView">
         	<a class="leftCarouselButton"></a>
