--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,7 @@
 <script src="javascript/VimeoView.js"></script>
 <script src="javascript/InfoWindow.js"></script>
 <script src="javascript/FullScreenWindow.js"></script>
+<script src="javascript/AnimationLayer"></script>
 <script src="javascript/ViewController.js"></script>
 <script src="javascript/Main.js"></script>
 <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -207,6 +208,9 @@ window.onload = function(){
     <div id="imageFullScreenView">
     	<div id="imageFullScreenMediaView"></div>
     	<div class="closeButton closeButtonBlack"></div>
+    </div>
+    <div id="animationLayer">
+    
     </div>
     <!--
     <div class="output">
