--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
 <script src="javascript/froogaloop.min.js"></script>
 <script src="javascript/jTweener-0.2-full.js"></script>
 <script src="javascript/swfaddress.js"></script>
+<script src="javascript/lib/jsBezier-0.2.js"></script>
 
 <script src="javascript/Utilities.js"></script>
 <script src="javascript/Geom.js"></script>
@@ -77,7 +78,7 @@
 <script src="javascript/VimeoView.js"></script>
 <script src="javascript/InfoWindow.js"></script>
 <script src="javascript/FullScreenWindow.js"></script>
-<script src="javascript/AnimationLayer"></script>
+<script src="javascript/AnimationLayer.js"></script>
 <script src="javascript/ViewController.js"></script>
 <script src="javascript/Main.js"></script>
 <link href="css/style.css" rel="stylesheet" type="text/css">
