add to archive animation, still bug in cancel tween on veil

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 	
 	
 	if(navigator.userAgent.indexOf('WebKit') > -1){
-		loadjscssfile('javascript/zepto.min.js','js');
+		loadjscssfile('javascript/lib/zepto.min.js','js');
 		//loadjscssfile('javascript/zepto.0.7.min.js','js');
 		//loadjscssfile('javascript/zepto.min.js','js');
 		//loadjscssfile('javascript/zepto.js','js');
@@ -20,7 +20,7 @@
 		//loadjscssfile('javascript/touch.js','js');
 		//loadjscssfile('javascript/event.js','js');
 	}else{
-		loadjscssfile('javascript/jquery-1.4.4.min.js','js');
+		loadjscssfile('javascript/lib/jquery-1.4.4.min.js','js');
 	}
 
 	function loadjscssfile(filename, filetype){
@@ -48,9 +48,9 @@
 <script src="javascript/event.js"></script>
 -->
 
-<script src="javascript/froogaloop.min.js"></script>
-<script src="javascript/jTweener-0.2-full.js"></script>
-<script src="javascript/swfaddress.js"></script>
+<script src="javascript/lib/froogaloop.min.js"></script>
+<script src="javascript/lib/jTweener.js"></script>
+<script src="javascript/lib/swfaddress.js"></script>
 <script src="javascript/lib/jsBezier-0.2.js"></script>
 
 <script src="javascript/Utilities.js"></script>
@@ -79,7 +79,9 @@
 <script src="javascript/InfoWindow.js"></script>
 <script src="javascript/FullScreenWindow.js"></script>
 <script src="javascript/AnimationLayer.js"></script>
+<script src="javascript/Veil.js"></script>
 <script src="javascript/ViewController.js"></script>
+
 <script src="javascript/Main.js"></script>
 <link href="css/style.css" rel="stylesheet" type="text/css">
 
