remove tween fixed on veil by creating Animation.js

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
 <script src="javascript/lib/jsBezier-0.2.js"></script>
 
 <script src="javascript/Utilities.js"></script>
+<script src="javascript/Animator.js"></script>
 <script src="javascript/Geom.js"></script>
 <script src="javascript/Globals.js"></script>
 <script src="javascript/TouchScrollPanel.js"></script>
