--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
 <script src="javascript/TouchScrollPanel.js"></script>
 <script src="javascript/LocalStorageManager.js"></script>
 <script src="javascript/DataManager.js"></script>
+<script src="javascript/ImageLoadManager.js"></script>
 <script src="javascript/ArtefactDataManager.js"></script>
 <script src="javascript/ArtefactsSelectionConfiguration.js"></script>
 <script src="javascript/DeepLinkingManager.js"></script>
