Tiles fade in on desktop
Slight glitch, a very few tiles when recycled are visible.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name = "viewport" id="viewport" content = "minimum-scale = 0.4, maximum-scale = 0.4, initial-scale = 0.4, user-scalable = no">
+<meta name = "viewport" id="viewport" content = "minimum-scale = 1, maximum-scale = 1, initial-scale = 1, user-scalable = no">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <title>Archive Prototype</title>
@@ -52,6 +52,11 @@
 <script src="javascript/lib/jTweener.js"></script>
 <script src="javascript/lib/swfaddress.js"></script>
 <script src="javascript/lib/jsBezier-0.2.js"></script>
+<script src="javascript/lib/BrowserDetect.js"></script>
+
+<script src="javascript/sequence/utils/utils.js"></script>
+<script src="javascript/sequence/utils/browser/browser.js"></script>
+<script src="javascript/sequence/effects/animation.js"></script>
 
 <script src="javascript/Utilities.js"></script>
 <script src="javascript/Animator.js"></script>
