--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,9 @@
 <script src="javascript/AutoCompleteViewController.js"></script>
 <script src="javascript/ArtefactWindow.js"></script>
 <script src="javascript/RelatedArtefactsViewController.js"></script>
+<script src="javascript/ScrollableCell.js"></script>
+<script src="javascript/RelatedArtefactCell.js"></script>
+<script src="javascript/ScrollableTable.js"></script>
 <script src="javascript/ArtefactPopup.js"></script>
 <script src="javascript/ImageView.js"></script>
 <script src="javascript/VimeoView.js"></script>
@@ -178,8 +181,8 @@ window.onload = function(){
         </ul>
         <div id="relatedArtefactsView">
         	<a class="leftCarouselButton"></a>
-        	<div id="relatedArtefactsContainer">
-        		<ul></ul>
+        	<div id="relatedArtefactsFrame">
+	       		<div id="relatedArtefactsContainer">
             </div>
             <a class="rightCarouselButton"></a>
         </div>
