--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,7 @@
 <script src="javascript/DeepLinkingManager.js"></script>
 <script src="javascript/CategoryCell.js"></script>
 <script src="javascript/CategoryTable.js"></script>
+<script src="javascript/TouchScrollableTablePanel"></script>
 <script src="javascript/RandomCanvas.js"></script>
 <script src="javascript/TileEngine.js"></script>
 <script src="javascript/TileEngineConfiguration.js"></script>
@@ -182,7 +183,7 @@ window.onload = function(){
         <div id="relatedArtefactsView">
         	<a class="leftCarouselButton"></a>
         	<div id="relatedArtefactsFrame">
-	       		<div id="relatedArtefactsContainer">
+	       		<div id="relatedArtefactsContainer"></div>
             </div>
             <a class="rightCarouselButton"></a>
         </div>
