--- a/src/index.html
+++ b/src/index.html
@@ -209,7 +209,7 @@ window.onload = function(){
         	</div>
         </div>
   		<div id="infoWindowGraphic">
-        	<video id="infoWindowGraphicVideo" preload="auto" autoplay="true" controls="true" width="320" height="320">
+        	<video id="infoWindowGraphicVideo" preload="none" controls="true" width="320" height="320">
             	<source src="video/Tutorial.mp4" type="video/mp4" />
             	<source src="video/Tutorial.theora.ogv" />
             </video>
