Dynamic Draw Thumb

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 <script src="javascript/DeepLinkingManager.js"></script>
 <script src="javascript/CategoryCell.js"></script>
 <script src="javascript/CategoryTable.js"></script>
-<script src="javascript/TouchScrollableTablePanel"></script>
+<script src="javascript/TouchScrollableTablePanel.js"></script>
 <script src="javascript/RandomCanvas.js"></script>
 <script src="javascript/TileEngine.js"></script>
 <script src="javascript/TileEngineConfiguration.js"></script>
