--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,7 @@
 
 <script src="javascript/Main.js"></script>
 <link href="css/style.css" rel="stylesheet" type="text/css">
+<link href="css/nav.css" rel="stylesheet" type="text/css">
 
 
 <script>
