Category Scrubber Added

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,7 @@
 <script src="javascript/DeepLinkingManager.js"></script>
 <script src="javascript/CategoryCell.js"></script>
 <script src="javascript/CategoryTable.js"></script>
+<script src="javascript/CategoryScrubberViewController.js"></script>
 <script src="javascript/TouchScrollableTablePanel.js"></script>
 <script src="javascript/RandomCanvas.js"></script>
 <script src="javascript/TileEngine.js"></script>
@@ -117,8 +118,11 @@ window.onload = function(){
 
 <body>
 	<div id="planeContainer">
-		<div id="plane"></div>
-        <div id="interactivePlane"></div>
+			<div id="plane"></div>
+			<div id="interactivePlane"></div>
+			<div id="category-scrubber-track">
+				<div id="category-scrubber-thumb"></div>
+			</div>
     </div>
     <div id="dockVeil"></div>
     <div id="dockContainer">
