--- a/src/index.html
+++ b/src/index.html
@@ -130,13 +130,11 @@ window.onload = function(){
     	
     	<form id="dockForm">
             <ul>
-                <li class="dockButton"><a id="dockResetButton">Reset</a></li>
-                <li class="dockButton"><a id="dockInfoButton">Info</a></li>
-                <li class="dockTitle"></li>
-                <li class="dockButton"><a id="dockHomeButton">Home</a></li>
-                <li class="dockButton"><a id="dockYearButton">Year</a></li>
-                <li class="dockButton"><a id="dockProductionButton">Production</a></li>
-                <li class="dockButton"><a id="dockMyArchiveButton">My Archive</a></li>
+                <li class="dockTitle">View the archive:</li>
+                <li class="dockButton"><a id="dockHomeButton">Canvas View</a></li>
+                <li class="dockButton"><a id="dockYearButton">By Year</a></li>
+                <li class="dockButton"><a id="dockProductionButton">By Production</a></li>
+                <li class="dockButton"><a id="dockMyArchiveButton">Your Archive</a></li>
                 <li class="dockTitle"></li>
                 <li class="dockButton"><a id="dockShowFiltersButton">Show Filters</a>
                     <ul id="dockSubMenu">
@@ -150,8 +148,8 @@ window.onload = function(){
                 </li>
                 <li class="dockTitle"></li>
                 <li><input type="text" id="dockSearchField"></li>
-                <li class="dockButton"><a id="dockSearchResetButton"><img src="images/resetSearch.png"></a></li>
                 <li class="dockButton"><a id="dockSearchButton"><img src="images/searchIcon.png"></a></li>
+								<li class="dockButton"><a id="dockInfoButton">Info</a></li>
             </ul>
         </form>
         <div id="autoCompleteShadow">
