--- a/src/index.html
+++ b/src/index.html
@@ -131,10 +131,10 @@ window.onload = function(){
     	<form id="dockForm">
             <ul>
                 <li class="dockTitle">View the archive:</li>
-                <li class="dockButton"><a id="dockHomeButton">Canvas View</a></li>
-                <li class="dockButton"><a id="dockYearButton">By Year</a></li>
-                <li class="dockButton"><a id="dockProductionButton">By Production</a></li>
-                <li class="dockButton"><a id="dockMyArchiveButton">Your Archive</a></li>
+                <li class="dockButton"><a id="dockHomeButton"><div class="dockViewIcon"></div>Canvas View</a></li>
+                <li class="dockButton"><a id="dockYearButton"><div class="dockViewIcon"></div>By Year</a></li>
+                <li class="dockButton"><a id="dockProductionButton"><div class="dockViewIcon"></div>By Production</a></li>
+                <li class="dockButton"><a id="dockMyArchiveButton"><div class="dockViewIcon"></div>Your Archive</a></li>
                 <li class="dockTitle"></li>
                 <li class="dockButton"><a id="dockShowFiltersButton">Show Filters</a>
                     <ul id="dockSubMenu">
