--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,7 @@
 <script src="javascript/VimeoView.js"></script>
 <script src="javascript/InfoWindow.js"></script>
 <script src="javascript/FullScreenWindow.js"></script>
+<script src="javascript/FullScreenMediaViewer.js"></script>
 <script src="javascript/AnimationLayer.js"></script>
 <script src="javascript/Veil.js"></script>
 <script src="javascript/ViewController.js"></script>
@@ -221,6 +222,12 @@ window.onload = function(){
     <div id="imageFullScreenView">
     	<div id="imageFullScreenMediaView"></div>
     	<div class="closeButton closeButtonBlack"></div>
+    </div>
+		<div id="full-screen-media-viewer">
+    	<div id="full-screen-media-viewer-item"></div>
+    	<div class="closeButton closeButtonBlack"></div>
+			<div class="previousButton previousButtonBlack"></div>
+			<div class="nextButton nextButtonBlack"></div>
     </div>
     <div id="animationLayer">
     
