--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,7 @@ window.onload = function(){
 		<div class="nextButton nextButtonBlack"></div>
 	</div>
 	<div id="animationLayer"></div>
-	<div class="veil-loader"><div class="veil-loader-background"></div><div class="veil-loader-animated"></div></div>
+	<div class="veil-loader" style="z-index:10;"><div class="veil-loader-background"></div><div class="veil-loader-animated"></div></div>
 	
 	
 	
